--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -2,13 +2,8 @@
   &-1
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 40%
-    right: 50%
-  &-2
-    animation: float1 2.8s ease-in-out infinite alternate
-    position: absolute
-    top: 51%
-    right: 30%
+    top: 45%
+    right: 0%
 
 
 @keyframes float1
@@ -17,3 +12,7 @@
 
   100%
     transform: translateY(0px)
+
+.banner-principal__img
+  img 
+    width: 80%
