--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -23,3 +23,10 @@
 
 .titulos-tema-1
   background-color: #CEBAF6
+
+.tema2,.tema3
+  .tabla-a table
+    min-width: auto !important
+
+mi.italic
+  font-style: italic
