Ajustes Tema1 - imagenes - textos - tablas

--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -56,8 +56,8 @@ $color-institucional: #39A900
 
 $color-primario: #0F58B9
 $color-secundario: #2E0877
-$color-acento-contenido: #AD84FF
-$color-acento-botones: #25FFFF
+$color-acento-contenido: #00BCD4
+$color-acento-botones: #AD84FF
 $color-adicional-1: #CDDC39
 $color-adicional-2: #00BCD4
 
